[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
rayon = "1.8.0"
itertools = "0.12.0"
pathfinding = "4.4.0"
memchr = "2.6.4"
fnv = "1.0.3"
faster-hex = "0.9.0"
